fixed config file

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Sabnam Pandit
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://sabnam-pandit.github.io/sabnampandit/'
 
 ############################
 ## LANGUAGE
